Fix: Update image aspect ratio to 2:3 for book covers

--- a/_sass/components/_post-card.scss
+++ b/_sass/components/_post-card.scss
@@ -17,7 +17,7 @@
     // background-color: $bg-gray;
     border-radius: $global-border-radius;
     margin-bottom: $base-spacing-unit + half($base-spacing-unit);
-    aspect-ratio: 3 / 2;
+    aspect-ratio: 2 / 3;
   }
 
   &__image-link {
